# DynaTable

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  LICENSE.md  README.md  compose.yml  mypy.ini  pyproject.toml  pytest.ini  run_simulation.sh  run_tests.sh
.github/workflows/: docker-image.yml
dynatable/: asgi.py  settings.py  urls.py
dynatablebackend/: urls.py  views.py
src/: manage.py
src/dynatable/: logger.py  settings.py  urls.py  views.py  wsgi.py
src/dynatablebackend/: __init__.py  apps.py  serializers.py  urls.py  views.py
src/dynatablebackend/db/: __init__.py  config.py  tables.py  util.py
src/simulation/: __init__.py  __main__.py
src/tests/: Dockerfile  __init__.py  data.json  generator.py  test_backend.py  test_serializers.py  test_tables.py  test_util.py
