[tool.poetry]
name = "DynaTable"
version = "0.1.0"
description = "Dynamic models in django"
authors = ["Mateusz Solnica <blooser@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
djangorestframework = "^3.15.1"
pytest-django = "^4.8.0"
sqlalchemy = "^2.0.29"
postgres = "^4.0"
shortuuid = "^1.0.13"
coverage = "^7.4.4"
pyyaml = "^6.0.1"
uritemplate = "^4.1.1"
inflection = "^0.5.1"
coreapi = "^2.3.3"
drf-yasg = "^1.21.7"
django-rest-swagger = "^2.2.0"
requests = "^2.31.0"

[tool.ruff]
lint.select = ["F", "W", "I001"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
